--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> Los lecheros Distri. </title>
 	<link rel="shortcut icon" href="../fotos/queso.png">
-    <link rel="stylesheet" href="../CSS/styleINDEX.css">
+    <link rel="stylesheet" href="../DESAFIO GRIDS/styleINDEX.css">
 </head>
 <body class="body">
     <div class="container">
