--- a/nosotros2.html
+++ b/nosotros2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> Los lecheros Distri. </title>
 	<link rel="shortcut icon" href="../fotos/queso.png">
-    <link rel="stylesheet" href="../DESAFIO GRIDS/styleNOSOTROS.css">
+    <link rel="stylesheet" href="./styleNOSOTROS.css">
 </head>
 <body class="body2">
     <div class="container2">
